--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "strictPropertyInitialization": true,
+    "strictPropertyInitialization": false,
   },
   "include": ["./src"],
   "exclude": ["node_modules"]
