--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "tslog": "^3.3.4",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
