--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "inversify": "^6.0.1",
     "prettier": "^2.7.1",
-    "tslog": "^3.3.4",
-    "typescript": "^4.8.4"
+    "reflect-metadata": "^0.1.13",
+    "tslog": "^3.3.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "typescript": "^4.8.4"
   }
 }
