add nodemon and ts-node

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "baseUrl": "src"
   },
   "include": [
-    "src/",
+    "src/"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
