--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "project api",
   "scripts": {
     "start": "node ./dist/main.js",
+    "start:dev": "nodemon",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,12 +13,15 @@
   "dependencies": {
     "express": "^4.18.2",
     "inversify": "^6.0.1",
-    "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
 }
