--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "Aleksandr Avdeev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
