--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start:dev": "nodemon",
     "start:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9229 -r ts-node/register ./src/main.ts",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "prisma:generate:types": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -26,6 +28,7 @@
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
