--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9229 -r ts-node/register ./src/main.ts",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "prisma:generate:types": "npx prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
@@ -25,12 +25,15 @@
     "tslog": "^3.3.4"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.2",
+    "@types/jsonwebtoken": "^8.5.9",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
