--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9229 -r ts-node/register ./src/main.ts",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "prisma:generate:types": "npx prisma generate",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "jest --config ./jest.e2e.config.ts --coverage"
   },
   "author": "Aleksandr Avdeev",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.1",
     "tslog": "^3.3.4"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
